[gd_scene load_steps=8 format=1]

[ext_resource path="res://big_shell_button.gd" type="Script" id=1]
[ext_resource path="res://graphics/ui/ShellBigButton0001.png" type="Texture" id=2]
[ext_resource path="res://graphics/ui/ShellBigButton0003.png" type="Texture" id=3]
[ext_resource path="res://graphics/ui/ShellBigButton0004.png" type="Texture" id=4]
[ext_resource path="res://audio/phonemes/phoneme_o.wav" type="Sample" id=5]

[sub_resource type="Animation" id=1]

resource/name = "shell_zoomout"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Shell_button_big:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( 440, 240 ), Vector2( 10, 290 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("Shell_button_big:rect/scale")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 1 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( 0.8, 0.8 ), Vector2( 0.28, 0.28 ) ] }

[sub_resource type="SampleLibrary" id=2]

samples/phoneme_o = { "db":0.0, "pitch":1.0, "sample":ExtResource( 5 ) }

[node name="Big_shell_ctrl" type="Control"]

process/pause_mode = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="Shell_button_big" type="TextureButton" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
rect/scale = Vector2( 0.8, 0.8 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -420.0
margin/top = -220.0
margin/right = -1070.0
margin/bottom = -780.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 2 )
textures/pressed = ExtResource( 3 )
textures/disabled = ExtResource( 4 )

[node name="shell_animator" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/shell_zoomout = SubResource( 1 )
next/shell_zoomout = ""
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="phoneticPlayer" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 2 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0


